--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="qt">Cậu có thích tớ không?</div>
             <button class="yes" onclick="openMd()">Có</button>
-            <button class="no" onclick="openMds()">Không</button>
+            <button class="no" >Không</button>
         </div>
     
         <div class="if_yes">Tôi cũng yêu cậu 
