--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             <button class="no" >Không</button>
         </div>
     
-        <div class="if_yes">Tôi cũng yêu cậu 
-            <i class="fas fa-heart"></i>
+        <div class="if_yes">
+            <img class="imgg" src="img/gif.jpg" alt=""><br><br>
+            Tớ cũng thích cậu
+            <i class="fas fa-heart"></i><br><br>
+            <p>Tớ hứa sẽ sửa cái bug này mà tin tớ :3</p>
             <div class="iconss" onclick="closeModalss()">
                 <i class="fas fa-times-circle"></i>
             </div>
