--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     
         <div class="if_yes">
-            <img class="imgg" src="img/gif.jpg" alt=""><br><br>
+            <img id="imgg" src="img/gif.jpg" alt=""><br><br>
             Tớ cũng thích cậu
             <i class="fas fa-heart"></i><br><br>
             <p>Tớ hứa sẽ sửa cái bug này mà tin tớ :3</p>
