--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         </div>
         <div class="rep">
             <div class="icon" onclick="">
-                <i class="fas fa-times-circle"></i>
+                <i class="fas fa-times-circle"></i> 
             </div>
             <div class="qt">Cậu có thích tớ không?</div>
             <button class="yes" onclick="openMd()">Có</button>
-            <button class="no" >Không</button>
+            <button class="no" onclick="openMds()">Không</button>
         </div>
     
-        <div class="if_yes">
-            <img id="imgg" src="mao.gif" alt=""><br><br>
+        <div class="if_yes"> 
+            <img class="imgg" src="img/mao.gif" alt=""><br><br>
             Tớ cũng thích cậu
             <i class="fas fa-heart"></i><br><br>
             <p>Tớ hứa sẽ sửa cái bug này mà tin tớ :3</p>
