--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
                 <li><a href="#">Category</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">More</a></li>
-            </ul>
+            </ul>        
+        </div>
+        <div class="content">
+           <div id="mads">
             <img id="may" src="img/mây.png">
             <img id="meo" src="img/meo.png">
+           </div>  
+           <div class="mad">
             <img id="chu" src="img/chu.png">
     
-            <button class="btn">Trả Lời đi</button>        
+            <button class="btn">Trả Lời đi</button> 
+           </div>
         </div>
         <div class="rep">
             <div class="icon" onclick="">
@@ -34,9 +40,9 @@
             </div>
             <div class="qt">Cậu có thích tớ không?</div>
             <button class="yes" onclick="openMd()">Có</button>
-            <button class="no" onclick="openMds()">Không</button>
+            <button class="no" >Không</button>
         </div>
-    
+    <div id="fomt">  
         <div class="if_yes"> 
             <img class="imgg" src="img/mao.gif" alt=""><br><br>
             Tớ cũng thích cậu
@@ -52,6 +58,7 @@
                 <i class="fas fa-times-circle"></i>
             </div>
         </div>
+    </div>      
         <div class="conten">
             <div class="tect">
                 <p>Music</p>
