--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img id="meo" src="img/meo.png">
            </div>  
            <div class="mad">
-            <img id="chu" src="img/chu.png">
+            <img id="chu" src="img/chu1.png">
     
             <button class="btn">Trả Lời đi</button> 
            </div>
